--- a/todoist/style.css
+++ b/todoist/style.css
@@ -78,6 +78,7 @@ form button {
   color: white;
   padding: 10px 20px;
   margin-top: 5px;
+  cursor: pointer;
 }
 
 form input {
@@ -91,6 +92,16 @@ form input:focus {
   outline: none;
 }
 
+form select {
+  border: 1px solid #ea776d;
+  padding: 10px;
+  width: 100%;
+  margin: 10px 0;
+}
+
+form select:focus {
+  outline: none;
+}
 form.active,
 .overlay.active {
   display: block;
