--- a/todoist/style.css
+++ b/todoist/style.css
@@ -53,6 +53,20 @@ li {
   border-radius: 5px;
   cursor: pointer;
   border: 1px solid black;
+  display: flex;
+  align-items: center;
+
+}
+
+.sidebar nav ul li button.delete-list {
+  background: none;
+  border: none;
+  color: red;
+  cursor: pointer;
+  font-size: 16px;
+  margin-inline:auto 5px;
+  
+
 }
 
 
