home page completed advanced html and css

--- a/css-exercises/advanced-html-css/animation/03-dropdown-menu/style.css
+++ b/css-exercises/advanced-html-css/animation/03-dropdown-menu/style.css
@@ -19,6 +19,7 @@
   background-color: rgb(99, 97, 97);
 
   display: none;
+  transition: transform 0.3s ease-in-out;
 }
 
 ul.dropdown-menu li:hover {
@@ -26,7 +27,21 @@ ul.dropdown-menu li:hover {
 }
 
 .visible {
+  animation: expand 500ms ease-in-out;
   display: block;
+  transform-origin: top;
 }
 
+@keyframes expand {
+  0% {
+    transform: scaleY(0);
+  }
 
+  70% {
+    transform: scaleY(1.1);
+  }
+  
+  100% {
+    transform: scaleY(1);
+  }
+}
