--- a/css-exercises/advanced-html-css/animation/02-pop-up/style.css
+++ b/css-exercises/advanced-html-css/animation/02-pop-up/style.css
@@ -39,6 +39,8 @@ button {
   pointer-events: none;
   opacity: 0%;
   text-align: center;
+
+  /* transition: all .3s ease-in-out ; */
 }
 
 .popup-modal p {
@@ -60,4 +62,13 @@ button {
 
 .backdrop.show {
   opacity: 30%;
+}
+
+.popup-modal {
+  transition: transform 0.3s ease-in-out, opacity 0.4s ease;
+  transform: translate(-50%, -100%);
+}
+
+.popup-modal.show {
+  transform: translate(-50%, -50%);
 }
